Atualizações: header com imagem funcional; seleção de tamanhos com botão de compra correto; correção Editar no dashboard; status esgotado e tamanhos com estoque; desabilitar compra em esgotado

--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Meu Perfil • STRONGFITNESS</title>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
-<style>:root{--bg:#0b0b0d;--panel:#121214;--panel2:#121212;--border:rgba(255,255,255,0.08);--text:#e6e6e6;--accent:#e50914;--accent2:#ff3b3b;--muted:#b3b3b3;--bg-image:url('./assets/bear-logo.jpg')}
-*{box-sizing:border-box}body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%), var(--bg-image);background-size:auto,cover;background-position:center;background-attachment:fixed;color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+<style>:root{--bg:#0b0b0d;--panel:#121214;--panel2:#121212;--border:rgba(255,255,255,0.08);--text:#e6e6e6;--accent:#e50914;--accent2:#ff3b3b;--muted:#b3b3b3}
+*{box-sizing:border-box}body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 .container{max-width:900px;margin:0 auto;padding:0 20px}
 .container h1{font-size:28px;font-weight:700;letter-spacing:.3px;margin:24px 0}
 h2{font-weight:600}
