--- a/checkout.html
+++ b/checkout.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Checkout • STRONGFITNESS</title>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
-<style>:root{--bg:#0b0b0d;--panel:#121214;--panel2:#121212;--border:rgba(255,255,255,0.08);--text:#e6e6e6;--accent:#e50914;--accent2:#ff3b3b;--muted:#b3b3b3;--bg-image:url('./assets/bear-logo.jpg')}
-*{box-sizing:border-box}body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%), var(--bg-image);background-size:auto,cover;background-position:center;background-attachment:fixed;color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+<style>:root{--bg:#0b0b0d;--panel:#121214;--panel2:#121212;--border:rgba(255,255,255,0.08);--text:#e6e6e6;--accent:#e50914;--accent2:#ff3b3b;--muted:#b3b3b3}
+*{box-sizing:border-box}body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 .container{max-width:1000px;margin:0 auto;padding:0 20px}
 .header{position:sticky;top:0;z-index:50;background:rgba(11,11,13,.8);backdrop-filter:blur(8px);border-bottom:1px solid var(--border);background-image:url('./assets/bear-logo.jpg');background-repeat:no-repeat;background-position:center;background-size:cover}
 .header-inner{display:grid;grid-template-columns:1fr minmax(240px,600px) 1fr;gap:12px;align-items:center;padding:14px 0}
