--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 html,body{height:100%}
 body{margin:0;background:radial-gradient(1200px 500px at 70% -200px,rgba(229,9,20,.15),transparent),#0b0b0d;color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 .container{max-width:1200px;margin:0 auto;padding:0 20px}
-.header{position:sticky;top:0;z-index:50;background:rgba(11,11,13,.8);backdrop-filter:blur(8px);border-bottom:1px solid var(--border);background-image:url('./assets/bear-logo.jpg');background-repeat:no-repeat;background-position:center;background-size:cover}
+.header{position:sticky;top:0;z-index:50;background:rgba(11,11,13,.8);backdrop-filter:blur(8px);border-bottom:1px solid var(--border);background-image:url('https://placehold.co/1600x300/0a0a0a/e6e6e6?text=STRONGFITNESS');background-repeat:no-repeat;background-position:center;background-size:cover}
 .header-inner{display:grid;grid-template-columns:1fr minmax(240px,600px) 1fr;gap:12px;align-items:center;padding:14px 0}
 .brand{font-family:Montserrat,Inter,sans-serif;font-weight:800;letter-spacing:.5px;font-size:20px;color:#fff;text-decoration:none}
 .search{display:flex;align-items:center;justify-self:center;width:100%;position:relative}
@@ -87,17 +87,17 @@ body{margin:0;background:radial-gradient(1200px 500px at 70% -200px,rgba(229,9,2
 .close-btn{position:absolute;left:10px;top:10px}
 .sidebar.open{background:rgba(0,0,0,.55)}
 .sidebar.open .sidebar-panel{transform:translateX(0)}
-.menu-logo-btn{background-image:url('./assets/bear-logo.jpg');background-repeat:no-repeat;background-position:center;background-size:24px}
+.menu-logo-btn{background-image:url('https://placehold.co/64x64/0a0a0a/e6e6e6?text=SF');background-repeat:no-repeat;background-position:center;background-size:24px}
 .menu-logo-btn img{display:none}
 </style>
 </head>
 <body>
-<script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
+
 <header class="header">
   <div class="container header-inner">
     <div class="left-actions">
       <button class="icon-btn menu-logo-btn" type="button" aria-label="Abrir menu">
-        <img src="./assets/bear-logo.jpg" alt="Abrir menu">
+        <img src="https://placehold.co/64x64/0a0a0a/e6e6e6?text=SF" alt="Abrir menu">
       </button>
       <a class="brand" href="/">STRONGFITNESS</a>
     </div>
