--- a/pagamento.html
+++ b/pagamento.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="pt-BR"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Pagamento • STRONGFITNESS</title>
 <style>
-:root{--bg:#0b0b0d;--panel:#141414;--panel2:#121212;--text:#e6e6e6;--muted:#9ea0a6;--border:rgba(255,255,255,0.08);--primary:#e50914;--bg-image:url('./assets/bear-logo.jpg')}
-body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%), var(--bg-image);background-size:auto,cover;background-position:center;background-attachment:fixed;color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+:root{--bg:#0b0b0d;--panel:#141414;--panel2:#121212;--text:#e6e6e6;--muted:#9ea0a6;--border:rgba(255,255,255,0.08);--primary:#e50914}
+body{margin:0;background:linear-gradient(180deg,#000 0%, #0a0000 100%);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 .container{max-width:1100px;margin:0 auto;padding:0 16px}
 .header{position:sticky;top:0;z-index:50;background:rgba(11,11,13,.8);backdrop-filter:blur(8px);border-bottom:1px solid var(--border);background-image:url('./assets/bear-logo.jpg');background-repeat:no-repeat;background-position:center;background-size:cover}
 .header-inner{display:grid;grid-template-columns:auto 1fr auto auto;gap:12px;align-items:center;padding:10px 0}
