Responsivo mobile: ajustes de header, grids e layout em páginas principais

--- a/auth.html
+++ b/auth.html
@@ -44,6 +44,7 @@ h2{font-weight:600}
 .toggle-eye{position:absolute;right:10px;top:50%;transform:translateY(-50%);height:28px;width:28px;border-radius:8px;border:1px solid var(--border);background:var(--panel2);display:flex;align-items:center;justify-content:center;cursor:pointer}
 .menu-logo-btn{background-image:url('./assets/bear-logo.jpg');background-repeat:no-repeat;background-position:center;background-size:24px}
 .menu-logo-btn img{display:none}
+@media(max-width:720px){.auth-grid{grid-template-columns:1fr}.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.card{padding:24px}}
 </style>
 </head>
 <body>
