--- a/carrinho.html
+++ b/carrinho.html
@@ -41,6 +41,7 @@ h2{font-weight:600}
 .input:focus{outline:none;border-color:#D40000}
 .qty{display:flex;gap:8px;align-items:center}
 .total{font-weight:800}
+@media(max-width:720px){.grid{grid-template-columns:1fr}.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}}
 </style></head>
 <body>
 <script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
