--- a/checkout.html
+++ b/checkout.html
@@ -38,6 +38,7 @@ h2{font-weight:600}
 .field{display:flex;flex-direction:column;gap:16px;margin-bottom:16px}
 .input{padding:12px;border-radius:12px;border:1px solid var(--border);background:var(--panel2);color:#e6e6e6}
 .input:focus{outline:none;border-color:#D40000}
+@media(max-width:720px){.grid{grid-template-columns:1fr}.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.card{padding:24px}}
 </style></head>
 <body>
 <script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
