--- a/enderecos.html
+++ b/enderecos.html
@@ -37,6 +37,7 @@
 .input:focus{outline:none;border-color:#D40000}
 .addr{display:flex;justify-content:space-between;border-bottom:1px solid var(--border);padding:10px 0}
 .type-row{display:flex;gap:8px;align-items:center}
+@media(max-width:720px){.grid{grid-template-columns:1fr}.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.card{padding:24px}}
 </style></head>
 <body>
 <script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
