--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ body{margin:0;background:radial-gradient(1200px 500px at 70% -200px,rgba(229,9,2
 .socials a{display:flex;align-items:center;gap:8px;color:#e6e6e6;text-decoration:none;font-weight:600}
 .socials img{height:18px;width:18px;filter:invert(1)}
 @media (min-width:720px){.hero h1{font-size:48px}.grid.benefits{grid-template-columns:repeat(3,minmax(0,1fr))}.collections .grid{grid-template-columns:repeat(4,minmax(0,1fr))}.testimonials .grid{grid-template-columns:repeat(4,minmax(0,1fr))}.footer .grid{grid-template-columns:repeat(3,minmax(0,1fr))}}
+@media (max-width:640px){.container{padding:0 14px}.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.hero{padding:36px 0}.hero h1{font-size:28px}.collections .grid{grid-template-columns:1fr}.testimonials .grid{grid-template-columns:1fr}.footer .grid{grid-template-columns:1fr}.cta-group{flex-direction:column}}
 </style>
 <style>
 .cart-wrap{position:relative}
