--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -43,6 +43,7 @@ h2{font-weight:600}
 .input:focus{outline:none;border-color:#D40000}
 .btn.ghost:hover,.btn.primary:hover{transform:translateY(-2px);filter:brightness(.98)}
 @media(max-width:860px){.grid{grid-template-columns:1fr}}
+@media(max-width:720px){.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.card{padding:24px}}
 </style></head>
 <body>
 <script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
