--- a/pedidos.html
+++ b/pedidos.html
@@ -37,6 +37,7 @@
 .item{display:flex;gap:8px;align-items:center;padding:6px 0}
 .thumb{width:40px;height:40px;border-radius:8px;background:var(--panel2);border:1px solid var(--border)}
 .order-actions{display:flex;gap:8px;margin-top:10px}
+@media(max-width:720px){.header-inner{grid-template-columns:1fr;gap:10px}.actions{justify-self:stretch;justify-content:space-between}.card{padding:24px}.order-head{flex-direction:column;gap:8px}}
 </style></head>
 <body>
 <script>var u=localStorage.getItem('sf_user');if(!u){location.href='./auth.html'}</script>
